--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body{
 .header{
     width: 1000px;
     height:220px;
-    background-image: url('../img/bg6.jpg');
+    background-image: url('../img/img1.jpg');
     background-size: 100% 200%;
     background-repeat: no-repeat;
     border-radius: 10px 10px 0 0;
