--- a/css/style.css
+++ b/css/style.css
@@ -5,24 +5,23 @@ body{
     font-family: 'Titillium Web', sans-serif;
 }
 
-
-
 .container{
     padding:10px;
-    width:1000px;
+    width:100%;
     margin:0 auto;
 }
 
 
 
 .header{
-    width: 1000px;
+    width: 100%;
     height:220px;
     background-image: url('../img/img1.jpg');
     background-size: 100% 200%;
     background-repeat: no-repeat;
     border-radius: 10px 10px 0 0;
     position: relative;
+    
 }
 .clear{
     width : 30px;
@@ -52,9 +51,9 @@ body{
 
 
 .content{
-    width:1000px;
+    width:100%;
     height: 350px;
-    max-height:350px;
+    max-height:400px;
     background-color: #FFF;
     overflow: auto;
 }
@@ -67,11 +66,9 @@ body{
 }
 
 .item{
-    width: 1000px;
-    height: 45px;
+    width: 100%;
     min-height: 45px;
     position: relative;
-    
     list-style: none;
     padding: 0;
     margin: 0;
@@ -97,7 +94,7 @@ body{
     left:50px;
     top:5px;
     background-color: #FFF;
-    max-width:880px;
+    max-width:100%;
 }
 .lineThrough{
     text-decoration: line-through;
@@ -118,8 +115,8 @@ body{
 /* add item */
 .add-to-do{
     position: relative;
-    width: 980px;
-    height:40px;
+    width: 98.5%;
+    height: 40px;
     background-color: #FFF;
     padding: 10px;
     border-top: 1px solid rgba(0,0,0,0.1);
@@ -134,9 +131,8 @@ body{
 
 .add-to-do input{
     position: absolute;
-    left: 50px;
     height: 35px;
-    width: 920px;
+    width: 97%;
     background-color: transparent;
     border: none;
     font-size: 20px;
@@ -148,3 +144,4 @@ body{
     font-style: bold;
     font-size: 20px;
 }
+
