--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     padding: 0;
     margin: 0;
-    background-color: rgba(0,0,0,0.1);
+    background-color: rgba(0,0,0,0);
     font-family: 'Titillium Web', sans-serif;
 }
 
@@ -51,7 +51,7 @@ body{
 .content{
     width:100%;
     height: 350px;
-    max-height:400px;
+    max-height:350px;
     background-color: #FFF;
     overflow: auto;
 }
@@ -67,6 +67,7 @@ body{
     width: 100%;
     min-height: 45px;
     position: relative;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
     list-style: none;
     padding: 0;
     margin: 0;
@@ -112,8 +113,8 @@ body{
 
 /* add item */
 .add-to-do{
-    position: relative;
-    width: 98.5%;
+    position: absolute;
+    width: 98%;
     height: 40px;
     background-color: #FFF;
     padding: 10px;
@@ -130,15 +131,16 @@ body{
 .add-to-do input{
     position: absolute;
     height: 35px;
-    width: 97%;
+    width: 98%;
     background-color: transparent;
     border: none;
     font-size: 20px;
     padding-left:10px;
 }
+
 .add-to-do input::-webkit-input-placeholder {
     color: #4162f6;
-    font-family: 'Bellota', cursive;
+    font-family: 'Titillium Web', sans-serif;
     font-style: bold;
     font-size: 20px;
 }
